[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/card_node_ui.gd" id="1"]

[node name="CardNode" type="PanelContainer"]
custom_minimum_size = Vector2(120, 180)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBox/TopRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Card Name"

[node name="CostLabel" type="Label" parent="VBox/TopRow"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 2
text = "1"

[node name="TypeLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
text = "ATK"

[node name="Sep" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ValueLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
text = "4"

[node name="DescriptionLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
autowrap_mode = 2
text = "Card description."

[node name="MasteryBar" type="ProgressBar" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 8)
max_value = 100.0
show_percentage = false
